# grac

./: .gitignore  Cargo.toml  README.md  cmp.py  justfile  mono.py  syl.py
benches/: benchmark.rs
py-grac/: .gitignore  Cargo.toml  grac.pyi  pyproject.toml
py-grac/grac/: __init__.py  __init__.pyi
py-grac/src/: lib.rs
scripts/: chars.py  extract_neuters.py  greek_language_gr.py  perseus.py  synizesis.py
scripts/synizesis/: build.py  extract_neuters.py  neuters.txt  scrape_wiktionary.py
scripts/synizesis/data/: neuters.txt  registry.txt  wiki_adj_ιος.txt  wiki_noun_fem_ια.txt  wiki_noun_masc_ιας.txt  wiki_noun_masc_ιος.txt  wiki_noun_neut_ια.txt  wiki_noun_neut_ιο.txt
scripts/testing/: cmp.py  mono.py  syl.py
src/: accents.rs  chars.rs  constants.rs  lib.rs  macros.rs  main.rs  monotonic.rs  syllabify.rs  synizesis.rs
tests/: tests.rs
tests/fixtures/: dump.txt  english.txt  monotonic.txt  polytonic.txt
