[package]
name = "grac"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grac"
path = "src/main.rs"

[dependencies]
greek-syllables = "0.1.4"
paste = "1.0.15"
quickcheck = "1.0.3"
unicode-normalization = "0.1.24"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

# Only use this when profiling via "cargo flamegraph"
[profile.release]
debug = true
