[package]
name = "grac"
version = "0.1.2"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/daxida/grac"
license = "MIT"

[[bin]]
name = "grac"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.3"
phf = { version = "0.11.2", features = ["macros"] }
unicode-normalization = "0.1.24"

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1.0.3"

[[bench]]
name = "benchmark"
harness = false

# Only use this when profiling via "cargo flamegraph"
[profile.release]
debug = true
